fix grid scrollbar issue

--- a/src/Apps/BugBashPro/scripts/Components/BugBashResults.scss
+++ b/src/Apps/BugBashPro/scripts/Components/BugBashResults.scss
@@ -24,10 +24,6 @@
                         .ms-Persona-details {
                             padding: 0 0 0 5px;
                         }
-    
-                        .ms-Persona-primaryText {
-                            font-size: 13px;
-                        }
                     }
     
                     &.is-dirty {
