--- a/src/Common/Components/VSTS/WorkItemStateView/WorkItemStateView.scss
+++ b/src/Common/Components/VSTS/WorkItemStateView/WorkItemStateView.scss
@@ -15,5 +15,7 @@
     .state-name {
         padding: 0;
         margin: 0;
+        flex: 1;
+        @include TextOverflowEllipsis();
     }
 }
